# soundboard

./: .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  config.example.toml  justfile
.context/: soundboard.md
src/: lib.rs  main.rs
systemd/: 99-soundboard.rules  soundboard.service  soundboard.socket
